--- a/Cloudbreak/docs/7.1.5-images-镜像.md
+++ b/Cloudbreak/docs/7.1.5-images-镜像.md
@@ -11,9 +11,9 @@
 | GCP | CentOS 7 |  
 | OpenStack | CentOS 7 |
 
-由于这些默认图像可能不符合某些用户的要求（例如，当用户要求包括 *自定义操作系统强化custom OS hardening* ， *自定义库custom libraries* ， *自定义工具custom tooling* 等）时，Cloudbreak将允许您使用自己的 **自定义基本映像 custom base images** 。
+由于这些默认镜像可能不符合某些用户的要求（例如，当用户要求包括 *自定义操作系统强化custom OS hardening* ， *自定义库custom libraries* ， *自定义工具custom tooling* 等）时，Cloudbreak将允许您使用自己的 **自定义基本镜像 custom base images** 。
 
-要使用您自己的 *自定义基本映像(custom base images)* ，您必须：
+要使用您自己的 *自定义基本镜像(custom base images)* ，您必须：
 
 1. 构建自定义镜像
 2. 准备自定义镜像目录JSON文件，并将其保存在Cloudbreak VM可访问到的位置
@@ -52,11 +52,11 @@
 
 | 参数 Parameter | 描述Description |
 |---|---|
-| 日期 date | Date for your image catalog entry. 图像目录条目的日期。 |
-| 描述 description | Description for your image catalog entry. 图像目录条目的描述。 |
-| 镜像 images | The image sets by cloud provider. An image set must store the virtual machine image IDs by the related region of the provider (AWS, Azure) or contain one default image for all regions (GCP, OpenStack). The virtual machine image IDs come from the result of the image burning process and must be an existing identifier of a virtual machine image on the related provider side. For the providers which use global rather than per-region images, the region should be replaced with **`default`**. 云供应商设置的图像。 映像集必须由提供程序的相关区域（AWS，Azure）存储虚拟机映像ID，或者包含所有区域的一个默认映像（GCP，OpenStack）。 虚拟机映像ID来自映像刻录过程的结果，并且必须是相关提供者端的虚拟机映像的现有标识符。 对于使用全局而非每个区域图像的提供者，该区域应替换为 **`default`** 。 |
-| 操作系统 os | The operating system used in the image. 图像中使用的操作系统。 |
-| 操作系统类型 os_type | The type of operating system which will be used to determine the default Ambari and HDP/HDF repositories to use. Set `os_type` to "redhat6" for amazonlinux or centos6 images. Set `os_type` to "redhat7" for centos7 or rhel7 images. 将用于确定要使用的默认Ambari和HDP / HDF存储库的操作系统类型。 将“os_type”设置为“redhat6”以获取amazonlinux或centos6图像。 对于centos7或rhel7图像，将“os_type”设置为“redhat7”。 |
+| 日期 date | Date for your image catalog entry. 镜像目录条目的日期。 |
+| 描述 description | Description for your image catalog entry. 镜像目录条目的描述。 |
+| 镜像 images | The image sets by cloud provider. An image set must store the virtual machine image IDs by the related region of the provider (AWS, Azure) or contain one default image for all regions (GCP, OpenStack). The virtual machine image IDs come from the result of the image burning process and must be an existing identifier of a virtual machine image on the related provider side. For the providers which use global rather than per-region images, the region should be replaced with **`default`**. 云供应商设置的镜像。 镜像集必须由提供程序的相关区域（AWS，Azure）存储虚拟机镜像ID，或者包含所有区域的一个默认镜像（GCP，OpenStack）。 虚拟机镜像ID来自镜像刻录过程的结果，并且必须是相关提供者端的虚拟机镜像的现有标识符。 对于使用全局而非每个区域镜像的提供者，该区域应替换为 **`default`** 。 |
+| 操作系统 os | The operating system used in the image. 镜像中使用的操作系统。 |
+| 操作系统类型 os_type | The type of operating system which will be used to determine the default Ambari and HDP/HDF repositories to use. Set `os_type` to "redhat6" for amazonlinux or centos6 images. Set `os_type` to "redhat7" for centos7 or rhel7 images. 将用于确定要使用的默认Ambari和HDP / HDF存储库的操作系统类型。 将“os_type”设置为“redhat6”以获取amazonlinux或centos6镜像。 对于centos7或rhel7镜像，将“os_type”设置为“redhat7”。 |
 | uuid | The `uuid` field must be a unique identifier within the file. You can generate it or select it manually. The utility `uuidgen` available from your command line is a convenient way to generate a unique ID. `uuid`字段必须是文件中的唯一标识符。 您可以生成它或手动选择它。 您可以从命令行使用实用程序`uuidgen`来生成唯一ID。 |
 
 **版本部分 Versions section**
@@ -66,16 +66,16 @@ The `versions` section includes a single "cloudbreak" entry, which maps the uuid
 
 | 参数 Parameter | 描述 Description |
 |---|---|
-| 镜像 images | Image `uuid`, same as the one that you specified in the `base-images` section. 图像`uuid`，与你在`base-images`部分中指定的相同。 |
-| 版本 versions | The Cloudbreak version(s) for which you would like to use the images. 您要使用图像的Cloudbreak版本。 |
+| 镜像 images | Image `uuid`, same as the one that you specified in the `base-images` section. 镜像`uuid`，与你在`base-images`部分中指定的相同。 |
+| 版本 versions | The Cloudbreak version(s) for which you would like to use the images. 您要使用镜像的Cloudbreak版本。 |
 
 ### Example image catalog JSON file 示例镜像目录JSON文件
 
 Here is an example image catalog JSON file that includes two sets of custom base images:
-以下是一个示例图像目录JSON文件，其中包含两组自定义基本映像：
+以下是一个示例镜像目录JSON文件，其中包含两组自定义基本镜像：
 
 * A custom base image for AWS:
-* AWS的自定义基本映像：
+* AWS的自定义基本镜像：
     * That is using Amazon Linux operating system
     * 那是使用亚马逊Linux操作系统
     * That will use the Redhat 6 repos as default Ambari and HDP repositories during cluster create  
@@ -85,7 +85,7 @@ Here is an example image catalog JSON file that includes two sets of custom base
     * Is available for Cloudbreak 2.4.0
     * 适用于Cloudbreak 2.4.0
 *  A custom base image for Azure, Google, and OpenStack:
-*  Azure，Google和OpenStack的自定义基本映像：
+*  Azure，Google和OpenStack的自定义基本镜像：
     * That is using CentOS 7 operating system
     * 那是使用CentOS 7操作系统
     * That will use the Redhat 7 repos as default Ambari and HDP repositories during cluster create  
@@ -187,7 +187,7 @@ You can also download it from [here](https://docs.hortonworks.com/HDPDocuments/C
 ## Register image catalog 注册镜像目录
 
 Now that you have created your image catalog JSON file, register it with your Cloudbreak instance. You can do this via Cloudbreak UI, CLI, or be editing the Profile file. 
-现在您已经创建了映像目录JSON文件，请将其注册到您的Cloudbreak实例。 您可以通过Cloudbreak UI，CLI或编辑Profile文件来完成此操作。
+现在您已经创建了镜像目录JSON文件，请将其注册到您的Cloudbreak实例。 您可以通过Cloudbreak UI，CLI或编辑Profile文件来完成此操作。
 
 <div class="note">
   <p class="first admonition-title">Important</p>
@@ -199,26 +199,26 @@ Now that you have created your image catalog JSON file, register it with your Cl
 ### Register image catalog in the UI 在UI中注册镜像目录
 
 Use these steps to register your custom image catalog in the Cloudbreak UI.
-使用以下步骤在Cloudbreak UI中注册自定义映像目录。
+使用以下步骤在Cloudbreak UI中注册自定义镜像目录。
 
 **步骤**
 
 1. In the Cloudbreak UI, select **External Sources** > **Image Catalogs** from the navigation menu.  
-2. 在Cloudbreak UI中，从导航菜单中选择**外部源**> **图像目录**。
+2. 在Cloudbreak UI中，从导航菜单中选择**外部源**> **镜像目录**。
 3. Click **Create Image Catalog**.  
-4. 单击**创建图像目录**。
+4. 单击**创建镜像目录**。
 5. Enter name for your image catalog and the URL to the location where it is stored.  
-6. 输入映像目录的名称以及指向其存储位置的URL。
+6. 输入镜像目录的名称以及指向其存储位置的URL。
 7. Click **Create**.
 8. 单击**创建**。
 
 After performing these steps, the image catalog will be available and automatically selected as the default entry in the image catalog drop-down list in the create cluster wizard.
-执行这些步骤后，映像目录将可用并自动选择为创建集群向导的映像目录下拉列表中的缺省条目。
+执行这些步骤后，镜像目录将可用并自动选择为创建集群向导的镜像目录下拉列表中的缺省条目。
 
 ### Register image catalog in the CLI 在CLI中注册镜像目录
 
 To register your custom image catalog using the CLI, use the `cb imagecatalog create` command. Refer to [CLI documentation](cli-reference.md#imagecatalog-create).
-要使用CLI注册自定义映像目录，请使用`cb imagecatalog create`命令。 请参阅[CLI文档]（cli-reference.md＃imagecatalog-create）。
+要使用CLI注册自定义镜像目录，请使用`cb imagecatalog create`命令。 请参阅[CLI文档]（cli-reference.md＃imagecatalog-create）。
 
 ### Register image catalog in the Profile 在Profile配置文件中注册镜像目录
 
@@ -231,9 +231,9 @@ As an alternative to using the UI or CLI, it is possible to place the catalog fi
 1. On the Cloudbreak machine, switch to the root user by using `sudo su`  
 2. 在Cloudbreak计算机上，使用`sudo su`切换到root用户
 3. Save the image catalog file on your Cloudbreak machine in the /var/lib/cloudbreak-deployment/etc directory.  
-4. 将映像目录文件保存在/ var / lib / cloudbreak-deployment / etc目录中的Cloudbreak计算机上。
+4. 将镜像目录文件保存在/ var / lib / cloudbreak-deployment / etc目录中的Cloudbreak计算机上。
 5. Edit the Profile file located in /var/lib/cloudbreak-deployment by adding export CB_IMAGE_CATALOG_URL to the file and set it to the name of your JSON file which declares your custom images. For example: `export CB_IMAGE_CATALOG_URL=custom-image-catalog.json`    
-6. 通过将export CB_IMAGE_CATALOG_URL添加到文件并将其设置为声明自定义映像的JSON文件的名称来编辑位于/ var / lib / cloudbreak-deployment中的Profile文件。 例如：`export CB_IMAGE_CATALOG_URL = custom-image-catalog.json`
+6. 通过将export CB_IMAGE_CATALOG_URL添加到文件并将其设置为声明自定义镜像的JSON文件的名称来编辑位于/ var / lib / cloudbreak-deployment中的Profile文件。 例如：`export CB_IMAGE_CATALOG_URL = custom-image-catalog.json`
 7. Save the Profile file.  
 8. 保存配置文件。
 9. Restart Cloudbreak by using `cbd restart`.  
@@ -242,7 +242,7 @@ As an alternative to using the UI or CLI, it is possible to place the catalog fi
 ## Select a custom image when creating a cluster 在创建集群时选择一个自定义镜像
 
 Once you have registered your image catalog, you can use your custom image(s) when creating a cluster.
-注册图像目录后，可以在创建集群时使用自定义图像。
+注册镜像目录后，可以在创建集群时使用自定义镜像。
 
 ### Select a custom image in Cloudbreak web UI 在Cloudbreak网页UI中选择一个自定义镜像
 
@@ -252,15 +252,15 @@ Perform these steps in the advanced **General Configuration** section of the cre
 **步骤**  
 
 1. In the create cluster wizard, make sure that you are using the advanced wizard version. You need to perform the steps in the **Image Settings** section.  
-2. 在“创建集群”向导中，确保使用高级向导版本。 您需要执行**图像设置**部分中的步骤。
+2. 在“创建集群”向导中，确保使用高级向导版本。 您需要执行**镜像设置**部分中的步骤。
 3. Under **Choose Image Catalog**, select your custom image catalog.  
-4. 在**选择图像目录**下，选择您的自定义图像目录。
+4. 在**选择镜像目录**下，选择您的自定义镜像目录。
 5. Under **Image Type**, select "Base Image".
-6. 在**图像类型**下，选择“基本图像”。
+6. 在**镜像类型**下，选择“基本镜像”。
 7. Under **Choose Image**, select the provider-specific image that you would like to use.   
-8. 在**选择图像**下，选择您要使用的提供者特定图像。
+8. 在**选择镜像**下，选择您要使用的提供者特定镜像。
     The "os" that you specified in the image catalog will be displayed in the selection and the content of the "description" will be displayed in green.    
-    您在图像目录中指定的“操作系统”将显示在选择中，“描述”的内容将以绿色显示。
+    您在镜像目录中指定的“操作系统”将显示在选择中，“描述”的内容将以绿色显示。
 9. You can leave the default entries for the Ambari and HDP/HDF repositories, or you can customize to point to specific versions of Ambari and HDP/HDF that you want to use for the cluster. 
 3.您可以保留Ambari和HDP / HDF存储库的默认条目，也可以自定义指向要用于集群的Ambari和HDP / HDF的特定版本。
 
@@ -269,12 +269,12 @@ Perform these steps in the advanced **General Configuration** section of the cre
 ### Select a custom image in the CLI 选择一个CLI中的自定义镜像
 
 To use the custom image when creating a cluster via CLI, perform these steps.  
-要在通过CLI创建集群时使用自定义映像，请执行以下步骤。
+要在通过CLI创建集群时使用自定义镜像，请执行以下步骤。
 
 **步骤**  
 
 1. Obtain the image ID. For example:
-2. 获取图像ID。 例如：
+2. 获取镜像ID。 例如：
 
     <pre>cb imagecatalog images aws --imagecatalog custom-catalog
 [
@@ -293,7 +293,7 @@ To use the custom image when creating a cluster via CLI, perform these steps.
 ]</pre>
 
 2. When preparing a CLI JSON template for your cluster, set the "ImageCatalog" parameter to the image catalog that you would like to use, and set the "ImageId" parameter to the uuid of the image from that catalog that you would like to use. For example:
-2. 为集群准备CLI JSON模板时，将“ImageCatalog”参数设置为您要使用的图像目录，并将“ImageId”参数设置为您希望的目录中图像的uuid。 使用。 例如：
+2. 为集群准备CLI JSON模板时，将“ImageCatalog”参数设置为您要使用的镜像目录，并将“ImageId”参数设置为您希望的目录中镜像的uuid。 使用。 例如：
 
     <pre>...
   "name": "aszegedi-cli-ci",
