--- a/Cloudbreak/docs/7.5-clusters-access-访问集群.md
+++ b/Cloudbreak/docs/7.5-clusters-access-访问集群.md
@@ -95,8 +95,8 @@ Below this, you will see additional tabs that you can click on in order to see t
 | Gateway | 为集群配置网关时，此部分可用。 它包括Ambari的网关URL和服务UI的URL。This section is available when gateway is configured for a cluster. It includes the gateway URL to Ambari and the URLs for the service UIs. |
 | Recipes | 本节包括与食谱相关的信息。 对于每个配方，您可以看到执行配方的主机组，配方名称和配方类型。 请参阅[使用自定义脚本（配方）]（recipes.md）。This section includes recipe-related information. For each recipe, you can see the host group on which a recipe was executed, recipe name, and recipe type. Refer to [Using custom scripts (recipes)](recipes.md). |
 | External databases | 如果您正在为集群使用外部数据库，则可以在此处查看。 请参阅[使用外部数据库]（external-db.md）。If you are using an external database for your cluster, you can see it here. Refer to [using an external database](external-db.md). |
-| Repository details | 本节包括Ambari和HDP / HDF存储库信息，正如您在创建集群时在“基本映像”部分中提供的那样。This section includes Ambari and HDP/HDF repository information, as you provided it in the "Base Images" section when creating a cluster. |
-| Image details | 此部分包含有关用于Cloudbreak实例的基本映像的信息。This section includes information about the base image that was used for the Cloudbreak instance. |
+| Repository details | 本节包括Ambari和HDP / HDF存储库信息，正如您在创建集群时在“基本镜像”部分中提供的那样。This section includes Ambari and HDP/HDF repository information, as you provided it in the "Base Images" section when creating a cluster. |
+| Image details | 此部分包含有关用于Cloudbreak实例的基本镜像的信息。This section includes information about the base image that was used for the Cloudbreak instance. |
 | Network | 此部分包括有关运行集群的网络和子网名称以及指向相关云提供程序控制台的链接的信息。This section includes information about the names of the network and subnet in which the cluster is running and the links to related cloud provider console. |
 | Security | 仅当您启用了Kerberos安全性时，此部分才可用。 它为您提供Kerberos配置的详细信息。This section is only available if you have enabled Kerberos security. It provides you with the details of your Kerberos configuration.  |
 | Autoscaling | 本节包括与自动缩放相关的配置选项。 请参阅[配置自动缩放]（autoscaling.md）。This section includes configuration options related to autoscaling. Refer to [Configuring autoscaling](autoscaling.md). |
