--- a/Cloudbreak/docs/7.6-clusters-manage-集群管理.md
+++ b/Cloudbreak/docs/7.6-clusters-manage-集群管理.md
@@ -26,7 +26,7 @@ When stack provisioning or cluster creation failure occurs, the "retry" option a
 发生堆栈置备或集群创建失败时，“重试”选项允许您从上一个失败的步骤恢复该过程。
 
 In some cases the cause of a failed stack provisioning or cluster creation can be eliminated by simply retrying the process. For example, in case of a temporary network outage, a retry should be successful. In other cases, a manual modification is required before a retry can succeed. For example, if you are using a custom image but some configuration is missing, causing the process to fail, you must log in to the machine and fix the issue; Only after that you can retry the the process.
-在某些情况下，只需重试该过程即可消除堆栈配置或集群创建失败的原因。 例如，在临时网络中断的情况下，重试应该是成功的。 在其他情况下，在重试成功之前需要手动修改。 例如，如果您使用自定义映像但缺少某些配置，导致进程失败，则必须登录到计算机并修复问题; 只有在那之后你才能重试这个过程。
+在某些情况下，只需重试该过程即可消除堆栈配置或集群创建失败的原因。 例如，在临时网络中断的情况下，重试应该是成功的。 在其他情况下，在重试成功之前需要手动修改。 例如，如果您使用自定义镜像但缺少某些配置，导致进程失败，则必须登录到计算机并修复问题; 只有在那之后你才能重试这个过程。
  
 Only failed stack or cluster creations can be retried. A retry can be initiated any number of times on a failed creation process. 
 只能重试失败的堆栈或集群创建。 在失败的创建过程中可以多次启动重试。
