--- a/Kubernetes/模块 3 - 探索你的应用.md
+++ b/Kubernetes/模块 3 - 探索你的应用.md
@@ -6,7 +6,7 @@
 
 如果没有Pod正在运行，则表示交互式环境仍在重新加载其以前的状态，请等待几秒钟，然后再次列出Pod。一旦看到一个Pod正在运行，您就可以继续。
 
-接下来，运行 ```describe pods``` 命令可以查看该Pod中有哪些容器以及用于构建这些容器的图像。
+接下来，运行 ```describe pods``` 命令可以查看该Pod中有哪些容器以及用于构建这些容器的镜像。
 
 ```kubectl describe pods```
 
