--- a/Cloudbreak/docs/7.1.10-external-db-外部数据库.md
+++ b/Cloudbreak/docs/7.1.10-external-db-外部数据库.md
@@ -154,7 +154,7 @@ Cloudbreak包括以下外部数据库选项：
     | 名称 | 输入将此数据库注册到Cloudbreak时要使用的名称，这**不**是数据库名称。 |
     | 类型 | 选择要使用外部数据库的服务，如果选择“Other其他”，则必须提供特殊蓝图。 |
     | JDBC链接 | 选择数据库 **type类型** 并输入 **JDBC connection JDBC连接** 字符串(HOST:PORT/DB_NAME)。 |
-    | 连接器JAR包的URL | （仅限MySQL和Oracle）提供JDBC连接器的JAR文件的URL，JAR文件必须托管在安装Ambari的集群主机可访问的位置。 在集群创建时，Cloudbreak将JAR文件放在/opts/jdbc-drivers目录下。如果您使用的是自定义映像，则无需提供“Connector JAR包的URL”，并且JAR文件将作为自定义映像刻录的一部分手动放置在VM上，或者使用配方放置在那里。 |
+    | 连接器JAR包的URL | （仅限MySQL和Oracle）提供JDBC连接器的JAR文件的URL，JAR文件必须托管在安装Ambari的集群主机可访问的位置。 在集群创建时，Cloudbreak将JAR文件放在/opts/jdbc-drivers目录下。如果您使用的是自定义镜像，则无需提供“Connector JAR包的URL”，并且JAR文件将作为自定义镜像刻录的一部分手动放置在VM上，或者使用配方放置在那里。 |
     | 用户名 | 输入 JDBC 连接用户名 |
     | 密码 | 输入 JDBC 连接密码 |
 
