--- a/Docker/3. docker.md
+++ b/Docker/3. docker.md
@@ -19,7 +19,7 @@ docker diff | 检查容器文件系统上文件或目录的更改
 docker events | 从服务器获取实时事件
 docker exec | 在正在运行的容器中运行命令
 docker export | 将容器的文件系统导出为tar存档
-docker history | 显示图像的历史记录
+docker history | 显示镜像的历史记录
 docker image | 管理图片
 docker images | 列出图片
 docker import | 从tarball导入内容以创建文件系统镜像
